fix: The GraphiQL dark theme caret is almost invisible. Make it brighter.

--- a/src/graphiql/graphiql-dark.css
+++ b/src/graphiql/graphiql-dark.css
@@ -1009,7 +1009,7 @@ div.CodeMirror-lint-tooltip > * + * {
 /* CURSOR */
 
 .CodeMirror div.CodeMirror-cursor {
-  border-left: 1px solid black;
+  border-left: 2px solid #CA9800;
 }
 /* Shown when moving in bi-directional text */
 .CodeMirror div.CodeMirror-secondarycursor {
